src/styles.css
/* ... */
@keyframes up-down {
  0% {
    transform: translateY(10px);
  }
  100% {
    transform: translateY(-10px);
  }
}

/******* Services ******/
.services .icon-box {
  text-align: center;
  border: 1px solid #fff;
  padding: 12px 20px;
  transition: all ease-in-out 0.3s;
  background: #fff;
  border-radius: 6px;
  box-shadow: 0 0 20px 0 #3e1c831a;
  width: 100%;
  margin-bottom: 20px;
}

.services .icon-box .icon {
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
  transition: ease-in-out 0.3s;
}
.easpromiseiticon{
  width: 80px;
}
/* .services .icon-box .icon.ghIcon {
  border: 5px solid #3f48cc;
  width: 80px;
  height: 80px;
  border-radius: 50%;
} */
.services .icon-box .icon.ghIcon.ghIcongray {
  border-color: #cccccc;
}
.services .icon-box .icon.ghIcon img {
  width: 42px;
  height: 42px;
}
.services .icon-box .icon.ghIcon img.speedheight {
  height: 35px;
}
.services .icon-box .icon i {
  color: #16df7e;
  font-size: 36px;
  transition: 0.3s;
}

.services .icon-box h4 a {
  color: #1c1b1b;
  transition: ease-in-out 0.3s;
}

.services .icon-box p {
  line-height: 22px;
  font-size: 14px;
  margin-bottom: 0;
}
.services .icon-box .icon img {
  width: 60px;
  height: 60px;
  object-fit: contain;
}
.services .icon-box:hover {
  border-color: #eaecef;
}

/*** Job category ***/

.role-job-type {
  display: flex;
  flex-wrap: wrap;
}
.role-job-type .role-job-list {
  position: relative;
  background: #fff;
  box-shadow: 0 0 20px 0 rgb(62 28 131 / 10%);
  -webkit-box-shadow: 0 0 20px 0 #3e1c831a;
  border-radius: 6px;
  margin-bottom: 10px;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 6px 12px;
  font-size: 14px;
  color: #000000;
  margin-right: 12px;
}
.role-categories {
  padding: 7em 4em;
  text-align: center;
}

.more-links a {
  position: relative;
  background: #fff;
  box-shadow: 0 0 20px 0 rgb(62 28 131 / 10%);
  -webkit-box-shadow: 0 0 20px 0 #3e1c831a;
  border-radius: 6px;
  margin-bottom: 10px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 6px 12px;
  font-size: 14px;
  color: #008fd6;
  margin-right: 12px;
  font-weight: 500;
}

.app-support-type {
  display: flex;
  flex-wrap: wrap;
  padding: 0px;
  margin: 12px 0px 6px 0px;
}
.app-support-type .app-support-list {
  position: relative;
  background: #fff;
  box-shadow: 0 0 20px 0 rgb(62 28 131 / 10%);
  -webkit-box-shadow: 0 0 20px 0 #3e1c831a;
  border-radius: 6px;
  margin-bottom: 8px;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px dashed #03a9f4;
  padding: 12px 12px;
  margin-right: 12px;
}
.app-support-type .app-support-list img {
  width: 100px;
  height: 100%;
  object-fit: contain;
}
.sec-title {
  display: flex;
  flex-wrap: wrap;
  padding-bottom: 60px;
}
.sec-title .first-half {
  width: 100%;
  max-width: 65%;
  flex: 0 0 65%;
  padding-right: 50px;
  border-right: 2px solid #202738;
}
.sec-title .first-half.talentfhalf {
  flex: 0 0 45%;
  border-color: #ffffff;
}
.sec-title .first-half.talentfhalf h2 {
  margin-bottom: 0px;
}
.sec-title .first-half h2 {
  font-size: 1.625rem;
  font-weight: 700;
  text-transform: capitalize;
  margin-bottom: 20px;
  padding-bottom: 0;
  color: #2e2e2e;
  position: relative;
  z-index: 2;
}
.sec-title .first-half p {
  color: #000000;
  margin: 20px 0 0px 0;
  letter-spacing: 0.56px;
  font: normal 14px/24px Roboto;
}
.sec-title .last-half {
  width: 100%;
  max-width: 35%;
  flex: 0 0 35%;
  padding-left: 50px;
  align-items: center;
}
.sec-title .talentshalf {
  width: auto;
  max-width: inherit;
  padding-left: 30px;
}
/*** Apptalents Flexible ***/
.apptalents-flex {
  text-align: center;
  border: 1px solid #d9d9d9;
  padding: 30px 14px;
  transition: all ease-in-out 0.3s;
  background: #fff;
  border-radius: 0px 33px 0px 33px;
  box-shadow: 0 0 20px 0 #3e1c831a;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-bottom: 4px solid #0aaeff;
}
.flexible-lottie{
  height: 150px;
}
.apptalents-flex img {
  width: 120px;
  height: 120px;
  object-fit: contain;
  margin: auto;
}
.apptalents-flex img.img-defultSize {
  width: 170px;
}

.apptalents-flex p {
  line-height: 24px;
  font-size: 14px;
  margin-bottom: 12px;
  color: #1c1b1b;
}
.apptalents-flex .apptalent-body {
  flex: 1 1 auto;
}

/** Developers **/
.developer-type {
  padding: 0px;
  display: flex;
  flex-wrap: wrap;
  margin-top: 20px;
  margin-bottom: 20px;
}
.developer-type .developer-list {
  width: 25%;
  padding-bottom: 10px;
}
.developer-type .developer-list a {
  color: #0b1320;
  text-decoration: none;
  font-size: 14px;
  position: relative;
  transition: 0.5s;
  display: flex;
  align-items: baseline;
}
.aerolestype .developer-list {
  width: 50%;
  padding-bottom: 6px;
}
.developer-type .developer-list a:hover {
  color: var(--blue-color);
}
.developer-type .developer-list a.linkview {
  color: var(--blue-color);
}
#banner-here h2.normal-title {
  font-size: 20px;
  line-height: 26px;
}
/** Footer **/
footer {
  background: #fafafa;
}
.main-footer {
  padding: 60px 0px 30px 0px;
  border-bottom: 1px solid #e0e0e0;
}
.foot-about h1 {
  font-size: 32px;
  margin: 0 0 30px 0;
  padding: 0;
  line-height: 1;
  font-weight: 700;
  letter-spacing: 0.5px;
  color: #0b1320;
}
.foot-about h2 {
  font-size: 18px;
  font-weight: 400;
  letter-spacing: 0.5px;
  color: #0b1320;
  margin: 0 0 25px 0;
}
.foot-about img {
  max-height: 45px;
  width: 160px;
  margin-bottom: 20px;
}
.foot-about p {
  color: #0b1320;
  letter-spacing: 0.56px;
  font: normal 14px/24px Roboto;
}

.foot-type {
  padding: 0px;
  margin-top: 0px;
}
.foot-type .foot-link a {
  display: block;
  color: #0b1320;
  text-decoration: none;
  font-size: 14px;
  position: relative;
  transition: 0.5s;
  padding-bottom: 12px;
}
/* ... */

